# manager-os

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  Start Manager OS.command  manager-os  pyproject.toml
config/: clients.yaml  deal_aliases.yaml  meeting_prep_rules.yaml  people.yaml  source_priority.yaml  source_scope.yaml
docs/: DASHBOARD_DEVELOPMENT_CHECKLIST.md  data-quality-fixes.md  deal-csv-formats.md  overnight-progress.md  post-merge-verification.md  project-doc-fetch.md  project-index.md  security.md  v0.2-first-real-data-runbook.md  v0.2-local-real-data-plan.md  workspace-activity-chat.md
frontend/: index.html  package-lock.json  package.json
prompts/: daily_brief.md
scripts/: validate_no_cost.sh
tests/: conftest.py  test_api_commands.py  test_api_daily.py  test_api_deals.py  test_api_feedback.py  test_api_forecast.py  test_api_health.py  test_api_meetings.py  test_api_people.py  test_api_projects.py  test_api_staffing_balance.py  test_api_static.py  test_api_status.py  test_api_workspace_context.py  test_calendar_sync_persistence.py  test_calendar_time_normalization.py  test_cli_daily.py  test_cli_daily_dry_run_no_llm.py  test_cli_daily_extract_mode.py  test_cli_daily_operating_loop.py  test_cli_demo_reset.py  test_cli_dry_run.py  test_cli_fetch_commands.py  test_cli_forecast_fetch_json_resilience.py  test_cli_profile_deals.py  test_cli_profile_forecast.py  test_cli_project_docs_fetch_batch.py  test_cli_project_docs_fetch_contract.py  test_cli_project_docs_fetch_observability.py  test_cli_readiness.py  test_cli_start.py  (+19 more)
(+194 files in other folders)
