[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "manager-os"
version = "0.1.0"
description = "Local-first consulting manager dashboard — ingest, extract, and act on management signals"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=0.10.0",
    "typer>=0.12.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "python-frontmatter>=1.1.0",
    "streamlit>=1.35.0",
    "pandas>=2.2.0",
    "jinja2>=3.1.0",
    "rich>=13.7.0",
    "fastapi>=0.110.0",
    "httpx>=0.27.0",
    "uvicorn>=0.29.0",
]

[project.scripts]
manager-os = "manager_os.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "pyright>=1.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/manager_os"]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pyright]
pythonVersion = "3.11"
pythonPlatform = "Linux"
include = ["src"]
strict = []

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/manager_os --cov-report=term-missing"

[tool.coverage.run]
source = ["src/manager_os"]
omit = ["*/dashboard/app.py"]
